wip: scheduled imports almost working except for version tracking issues

--- a/apps/faqcheck_web/lib/faqcheck_web/templates/layout/root.html.leex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/layout/root.html.leex
@@ -46,10 +46,10 @@
     	    <% end %>
     	  </ul>
 
-	  <!-- <details>
+	  <details>
 	    <summary>assigns</summary>
 	    <%= inspect @conn.assigns %>
-          </details> -->
+          </details>
         </nav>
       </section>
     </header>
